--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,3 +75,10 @@
   font-display: swap;
   src: url("/assets/fonts/the-signature/Thesignature.ttf") format("truetype");
 }
+
+/* Custom */
+.hero-image {
+  background-image: url("/assets/images/img-home-page.png");
+  background-size: cover;
+  background-position: center;
+}
