--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,20 @@ html {
 
 /* Custom */
 .hero-image {
-  background-image: url("/assets/images/img-home-page.png");
+  background-image: url("/assets/images/img-home-page.webp");
+  background-size: cover;
+  background-position: center;
+}
+
+.information-image {
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.36) 0%,
+      rgba(0, 0, 0, 0.36) 100%
+    ),
+    url("/assets/images/img-background.webp");
+  width: 100%;
+  height: 100%;
   background-size: cover;
   background-position: center;
 }
