--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,6 +81,40 @@ html {
 }
 
 /* Custom */
+::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #0b7373;
+  border: 0px none #ffffff;
+  border-radius: 100px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #004040;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #004040;
+}
+::-webkit-scrollbar-track {
+  background: #faf9f5;
+  border: 0px none #ffffff;
+  border-radius: 100px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #f0f0f0;
+}
+::-webkit-scrollbar-track:active {
+  background: #ebebeb;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
 .hero-image {
   background-image: url("/assets/images/img-home-page.webp");
   background-size: cover;
